# Alzheimers-VAEs

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
config/: data.yml  experiments.yml  model.yml  training.yml
src/: inference.py  load_data.py  train.py
src/models/: basic.py
src/neuroae/: __main__.py  eval.py  inference.py  load_data.py  loss.py  train.py
src/neuroae/models/: __init__.py  basic.py  convAE.py  linear.py  monaiAEKL.py  pca.py  perl2023.py  pinaya2018.py
src/neuroae/utils/: dict_utils.py
src/training_tracker/: __init__.py  __main__.py
src/training_tracker/core/: __init__.py  filters.py  index.py  manager.py  schemas.py  storage.py
src/training_tracker/ui/: __init__.py  app.py
